Fixed button icons screwing up button text alignment when gtk button icons are enabled
(integrated from komodo (trunk) change 76314 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11470 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/icons.less
@@ -43,6 +43,8 @@ treechildren::-moz-tree-image
     height: 16px;
 }
 
+button > hbox.button-box > image.button-icon { width: auto; height: auto; }
+
 [class*='-icon '][disabled="true"] > image,
 [class$='-icon'][disabled="true"] > image
 {
